WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154083
CSSSegmentedFontFace does not need to be reference counted
https://bugs.webkit.org/show_bug.cgi?id=154083
Summary
CSSSegmentedFontFace does not need to be reference counted
Myles C. Maxfield
Reported
2016-02-10 13:00:16 PST
CSSSegmentedFontFace does not need to be reference counted
Attachments
Patch
(4.04 KB, patch)
2016-02-10 13:01 PST
,
Myles C. Maxfield
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-02-10 13:01:04 PST
Created
attachment 271021
[details]
Patch
Antti Koivisto
Comment 2
2016-02-10 13:03:22 PST
Comment on
attachment 271021
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=271021&action=review
> Source/WebCore/css/CSSSegmentedFontFace.h:43 > -class CSSSegmentedFontFace : public RefCounted<CSSSegmentedFontFace> { > +class CSSSegmentedFontFace { > public:
You might want to add WTF_MAKE_FAST_ALLOCATED;
Myles C. Maxfield
Comment 3
2016-02-10 13:08:07 PST
Committed
r196388
: <
http://trac.webkit.org/changeset/196388
>
Myles C. Maxfield
Comment 4
2016-02-10 13:57:57 PST
Committed
r196393
: <
http://trac.webkit.org/changeset/196393
>
Darin Adler
Comment 5
2016-02-11 09:42:57 PST
Comment on
attachment 271021
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=271021&action=review
> Source/WebCore/css/CSSFontSelector.cpp:472 > + std::unique_ptr<CSSSegmentedFontFace>& face = segmentedFontFaceCache.add(traitsMask, nullptr).iterator->value;
I think auto& is an improvement for code like this; what’s the need to restate the type on this line of code?
> Source/WebCore/css/CSSSegmentedFontFace.h:42 > +class CSSSegmentedFontFace {
Maybe mark this class final. Along with the lack of virtual functions, makes it clear there’s no polymorphism here.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug