CSSSegmentedFontFace does not need to be reference counted https://bugs.webkit.org/show_bug.cgi?id=154083

Reviewed by Antti Koivisto.

...There is only ever a single reference to one.

No new tests because there is no behavior change.

* css/CSSFontSelector.cpp:
(WebCore::CSSFontSelector::getFontFace):
* css/CSSFontSelector.h:
* css/CSSSegmentedFontFace.h:
(WebCore::CSSSegmentedFontFace::create): Deleted.

Canonical link: https://commits.webkit.org/172189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196388 268f45cc-cd09-0410-ab3c-d52691b4dbfc